Fix bug 1162631 - add Rebecca Davies to leadership page

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -251,6 +251,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://mozillians.org/u/RebsD/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/rebecca-davies.jpg') }}">
+          <span class="fn" itemprop="name">Rebecca Davies</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Interim VP, Fundraising') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/RebsD">@RebsD</a></li>
+          <li><a class="url website" itemprop="url" href="http://101fundraising.org/author/rebecca-davies/">101fundraising.org</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/RebsD/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://mozillians.org/u/CLAW/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/chris-lawrence.jpg') }}">
           <span class="fn" itemprop="name">Chris Lawrence</span>
