updating bug bounty hall of fame for Q1 2015 and Q4 2014

--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -32,9 +32,52 @@
 
       <div class="accordion accordion-auto-init zebra">
 
+      <section id="year-2015">
+        <h3 data-accordion-role="tab">{{ _('2015') }}</h3>
+        <div data-accordion-role="tabpanel">
+          <h4>1st Quarter 2015</h4>
+          <ul>
+            <li>Abhishek Arya</li>
+            <li>Aki Helin</li>
+            <li>andrebargull</li>
+            <li>Armin Razmdjou</li>
+            <li>Atte Kettunen</li>
+            <li>Enrique Rando</li>
+            <li>Hanno Bock</li>
+            <li>Holger Fuhrmannek</li>
+            <li>l.pontorieri</li>
+            <li>Joev</li>
+            <li>Jordi Chancel</li>
+            <li>Looben Yang</li>
+            <li>Marius Mlynski</li>
+            <li>Michal Zalewski</li>
+            <li>moz_bug_r_a4</li>
+            <li>Muneaki Nishimura</li>
+            <li>Nils</li>
+            <li>Pantrombka</li>
+            <li>Paul</li>
+            <li>Sergey</li>
+            <li>websec02</li>
+          </ul>
+        </div>
+      </section>
+
       <section id="year-2014">
         <h3 data-accordion-role="tab">{{ _('2014') }}</h3>
         <div data-accordion-role="tabpanel">
+         <h4>4th Quarter 2014</h4>
+          <ul>
+            <li>Abhishek Arya</li>
+            <li>codyc</li>
+            <li>James Kettle</li>
+            <li>Michal Zalewski</li>
+            <li>lifeasageek</li>
+            <li>Looben Yang</li>
+            <li>Michal Zalewski</li>
+            <li>mitchwharper</li>
+            <li>Skylined</li>
+            <li>teterinis</li>
+          </ul>
           <h4>3rd Quarter 2014</h4>
           <ul>
             <li>regenrecht</li>
