Bug 1162048 - Use new mozid-modal css across all of mozilla.org. Renamed to mozilla-modal to match js.

--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -321,6 +321,9 @@
 }
 
 @media (max-width: @breakTablet) {
+    #modal .window .inner > header {
+        padding-top: 20px;
+    }
     #masthead,
     .container {
         width: @breakMobileLandscape - (@gridGutterWidth * 2);
