--- a/media/css/firefox/os/devices.less
+++ b/media/css/firefox/os/devices.less
@@ -1038,6 +1038,9 @@ html[lang^="en"] #purchase-device-sticky {
         margin-right: 0;
         width: auto;
     }
+    #modal .window .inner > header {
+        padding: 20px 0;
+    }
 }
 
 /****************************************************************************/
