--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -5,20 +5,21 @@
     position: relative;
 }
 
-#get-device {
-    padding: @baseLine;
-    width: @widthDesktop - (@gridGutterWidth * 4);
-    margin: 0 auto @baseLine auto;
-    background: #fff;
-    header {
-        display: none;
-    }
-    h2 {
-        .font-size(26px);
-        color: #666;
-        letter-spacing: -1px;
-        padding-bottom: (@baseLine * 2);
-        margin-bottom: @baseLine;
+#modal {
+    #get-device {
+        padding: @baseLine;
+        margin: 0 auto @baseLine auto;
+        background: #fff;
+        header {
+            display: none;
+        }
+        h2 {
+            .font-size(26px);
+            color: #666;
+            letter-spacing: -1px;
+            padding-bottom: (@baseLine * 2);
+            margin-bottom: @baseLine;
+        }
     }
 }
 
