--- a/media/css/firefox/partners.less
+++ b/media/css/firefox/partners.less
@@ -645,6 +645,21 @@
     }
 }
 
+#modal .window .inner  {
+    #schedule.overlay-contents {
+        background-color: #fff;
+        padding-top: 10px;
+
+        .schedule-header  {
+            padding-left: 10px; 
+        }
+    }
+
+    header {
+        font-size: 40px;
+    }
+}
+
 .js .overlay-contents {
     padding: 0;
 
@@ -851,11 +866,10 @@
 
     #testimonials {
         iframe {
-            width: 640px;
-            height: 360px;
+            width: 960px;
+            height: 540px;
         }
     }
-
 }
 
 
