--- a/media/css/foundation/annual2013.less
+++ b/media/css/foundation/annual2013.less
@@ -160,8 +160,16 @@ body {
     }
 }
 
-#modal .video {
-    display: block;
+#modal {
+    .video {
+        display: block;
+
+        video {
+            margin: 0 auto;
+            width: 100%;
+            height: auto;
+        }
+    }
 }
 
 .site-footer {
