--- a/media/css/base/mozilla-modal.less
+++ b/media/css/base/mozilla-modal.less
@@ -9,8 +9,8 @@ html.noscroll body {
 }
 
 #modal {
-    background: #354b5d;
-    background: rgba(53, 75, 93, 0.8);
+    background: #000;
+    background: rgba(0, 0, 0, 0.85);
     width: 100%;
     height: 101%;
     position: fixed;
@@ -28,52 +28,62 @@ html.noscroll body {
 
         .inner {
             position: relative;
-            @shadow: 0 1px 22px rgba(0, 0, 0, 0.8);
-            .box-shadow(@shadow);
 
-            header {
+            &> header {
                 display: block;
-                background: #0095dd;
-                padding: 10px @baseLine;
-                height: 38px;
-                .font-size(26px);
+                height: auto;
+                .font-size(48px);
+                line-height: 1.3;
+                padding: 0 (@gridGutterWidth * 3);
+                text-align: center;
                 color: #fff;
                 .open-sans-light;
-                .transition;
             }
 
             #modal-close {
                 z-index: 99;
                 position: absolute;
-                top: 9px;
+                top: -20px;
                 right: 9px;
                 cursor: pointer;
 
                 a {
-                    color: #fff;
-                    vertical-align: middle;
-                    padding: 0 3px;
+                    // TODO: remove <a> element from mozilla-modal.js with mozID rollout
+                    display: none;
                 }
 
                 .button {
+                    background-color: transparent;
+                    // png fallback for IE8
+                    background-image: url(/media/img/mozid/modal-close.png);
+                    // svg for good browsers
+                    background-image: none, url(/media/img/mozid/modal-close.svg);
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    background-size: 22px 22px;
+                    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+                    -ms-filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
                     padding: 0;
-                    min-width: 34px;
-                    .font-size(30px);
-                    vertical-align: middle;
-                }
+                    min-width: 0;
+                    width: 42px;
+                    height: 42px;
+                    .image-replaced();
+                    border-radius: 50%;
+                    border: 2px solid #fff;
 
-                &:hover {
-                    a {
-                        text-decoration: underline;
+                    &:hover,
+                    &:focus {
+                        .transform(scale(1.1));
+                        box-shadow: none;
                     }
                 }
             }
 
             .overlay-contents {
-                background: #fff;
-                padding: @baseLine;
+                background: transparent;
+                padding-top: @baseLine;
                 margin: 0 auto;
-                img {
+                img, iframe {
                     max-width: 100%;
                 }
             }
@@ -92,8 +102,8 @@ html[dir="rtl"] {
 
 @media only screen and (min-width: @breakDesktop) {
     #modal .inner {
-        width: @widthDesktop;
-        margin: 60px auto;
+        width: @widthDesktop - (@gridGutterWidth * 2);
+        margin: @baseLine auto (@baseLine * 3);
         .footer {
             .clearfix();
             padding-left: 30px;
@@ -116,7 +126,7 @@ html[dir="rtl"] {
     #modal .inner {
         .span_narrow(12);
         float: none;
-        margin: 60px auto;
+        margin: @baseLine auto (@baseLine * 3);
     }
 }
 
@@ -136,10 +146,15 @@ html[dir="rtl"] {
     #modal .window {
         margin: 0 auto;
 
-        .inner header {
-            // remove left/right padding so the .image-replaced works as expected
-            padding: 10px 0;
-            .image-replaced();
+        .inner {
+            margin-top: 20px;
+
+            &> header {
+                // remove left/right padding so the .image-replaced works as expected
+                padding: 10px 0;
+                .image-replaced();
+                height: 0;
+            }
         }
     }
 }
