--- a/media/css/firefox/dev-firstrun.less
+++ b/media/css/firefox/dev-firstrun.less
@@ -234,6 +234,10 @@
 }
 
 @media (max-width: @breakTablet) {
+    #modal .window .inner > header {
+        padding-top: 20px;
+    }
+    
     #masthead,
     .container {
         width: @breakMobileLandscape - (@gridGutterWidth * 2);
