--- a/media/css/firefox/geolocation.less
+++ b/media/css/firefox/geolocation.less
@@ -30,27 +30,50 @@
     }
 }
 
-#locateButton {
-    margin: 0 0 10px 0;
-}
+#modal {
+    .inner {
+        width: 540px;
+    }
 
-#geo-busy {
-    width: 16px;
-    height: 15px;
-    vertical-align: middle;
-}
+    #geo-demo {
+        position: relative;
+        top: 50px;
+        background: #646464; 
+        padding: 0 0 10px 0;
+    }
 
-#geodemo-error {
-    color: red;
-}
+    #locateButton {
+        margin: 0 0 10px 15px;
+        background-color: #FFF;
+        border: none;
+        padding: 1em;
+        cursor: pointer;
+    }
 
-#modal .inner {
-    width: 540px;
+    #geodemo-error {
+        color: red;
+        margin-left: 15px;
+    }
+
+    #geo-busy {
+        width: 16px;
+        height: 15px;
+        vertical-align: middle;
+    }
 }
 
 /* Mobile Layout: 320px */
 @media only screen and (max-width: @breakTablet) {
     .main-column {
         .span-all();
+    }
+
+    #modal .window .inner {
+        margin: 60px auto;
+        > header {
+            height: auto;
+            overflow: inherit;
+            padding: 0;
+        }
     }
 }
