--- a/media/css/mozorg/contribute/friends.less
+++ b/media/css/mozorg/contribute/friends.less
@@ -10,7 +10,7 @@
         width: 100%;
     }
     #masthead {
-        background: #373737 url(/media/img/contribute/friends/header-img-wide.jpg) 50% 0 no-repeat;
+        background: #373737 url(/media/img/contribute/friends/hero-image-home.jpg) 50% 0 no-repeat;
         padding: 0 180px;
         width: 100%;
         .border-box();
@@ -24,6 +24,7 @@
         }
 
         @media only screen and (max-width: @breakMobileLandscape) {
+            background-image: url(/media/img/contribute/friends/hero-image-home-mobile.jpg);
             padding: 0 20px;
         }
     }
