Bug 1164300 - Remove/Update Affiliates Links on moz.org properties, part 1

--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -15,7 +15,7 @@
               <li><a href="{{ url('mozorg.contact.spaces.spaces-landing') }}">{{ _('Contact Us') }}</a></li>
               <li class="wrap"><a href="{{ url('mozorg.partnerships') }}">{{ _('Partner with Us' ) }}</a></li>
               <li class="clear"><a href="{{ donate_url('mozillaorg_footer') }}" class="donate">{{ _('Donate') }}</a></li>
-              <li class="wrap"><a href="https://affiliates.mozilla.org/">{{ _('Firefox Affiliates') }}</a></li>
+              <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}">{{ _('Firefox Friends') }}</a></li>
               <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org">{{ _('Contribute to this site') }}</a></li>
             </ul>
             <ul class="links-legal">
