--- a/bedrock/styleguide/templates/styleguide/docs/send-to-device.html
+++ b/bedrock/styleguide/templates/styleguide/docs/send-to-device.html
@@ -20,7 +20,7 @@
 {% block content %}
 <article id="main-content">
   <h1>Send to Device example</h1>
-  {{ send_to_device(platform='select', include_logo=True) }}
+  {{ send_to_device(platform='android', include_logo=True) }}
 </article>
 {% endblock %}
 
