--- a/media/css/base/send-to-device.less
+++ b/media/css/base/send-to-device.less
@@ -93,13 +93,13 @@
     }
 
     a {
-        color: #0c99d5;
+        color: @mozIDBlue;
         .transition(color .1s ease-in-out);
 
         &:active,
         &:hover,
         &:focus {
-            color: darken(#0c99d5, 5%);
+            color: darken(@mozIDBlue, 5%);
         }
     }
 
@@ -169,7 +169,7 @@
             }
         }
 
-        input[type="text"] {
+        #id-input {
             width: 440px;
             height: 32px;
             padding: 5px 10px;
@@ -230,15 +230,15 @@
     }
 
     .error-list {
-        margin: @baseLine 0;
+        margin-bottom: @baseLine;
+        text-align: left;
 
         li {
             background: #c33b32;
             color: #fff;
-            max-width: 40em;
+            width: 600px;
             margin: @baseLine auto;
-            padding: .5em;
-            text-align: left;
+            padding: 10px;
             border-radius: 3px;
         }
     }
@@ -331,7 +331,7 @@
             }
         }
 
-        input[type="text"] {
+        #id-input {
             width: 360px;
         }
 
@@ -355,6 +355,10 @@ html[dir="rtl"] #send-to-device-form {
         .form-submit {
             float: left;
         }
+    }
+
+    .error-list {
+        text-align: right;
     }
 
     &.dropdown .input {
@@ -401,6 +405,10 @@ html[dir="rtl"] #send-to-device-form {
             }
         }
 
+        .error-list li {
+            width: 620px;
+        }
+
         &.dropdown .input {
             width: auto;
 
@@ -432,7 +440,7 @@ html[dir="rtl"] #send-to-device-form {
                 }
             }
 
-            input[type="text"] {
+            #id-input {
                 width: 440px;
             }
         }
@@ -465,6 +473,7 @@ html[dir="rtl"] #send-to-device-form {
 
         h2 {
             max-width: none;
+            .font-size(32px);
         }
 
         .form-container {
@@ -525,7 +534,7 @@ html[dir="rtl"] #send-to-device-form {
                 }
             }
 
-            input[type="text"] {
+            #id-input {
                 float: none;
                 .border-box();
                 display: block;
@@ -538,6 +547,10 @@ html[dir="rtl"] #send-to-device-form {
                 width: 100%;
                 margin-top: @baseLine;
             }
+        }
+
+        .error-list li {
+            width: auto;
         }
 
         &.dropdown .input {
@@ -554,7 +567,7 @@ html[dir="rtl"] #send-to-device-form {
                 }
             }
 
-            input[type="text"] {
+            #id-input {
                 width: 100%;
             }
         }
@@ -576,7 +589,14 @@ html[dir="rtl"] #send-to-device-form {
 }
 
 @media only screen and (max-width: @breakMobileLandscape) {
-    #send-to-device .form-container {
-        width: @widthMobile - @gridGutterWidth;
+    #send-to-device {
+
+        h2 {
+            .font-size(28px);
+        }
+
+        .form-container {
+            width: @widthMobile - @gridGutterWidth;
+        }
     }
 }
