Update /whatsnew headline with LATE LATE change
Requesting to update the /whatsnew headline with a late change from PMM & the Pocket team.

Copy doc for reference: https://docs.google.com/document/d/1Tylrag0ACcV7S4mnVyZ0mddJIerDQVQGG4QeBS_Sxlo/edit

--- a/bedrock/firefox/templates/firefox/whatsnew_38/whatsnew-pocket-video.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_38/whatsnew-pocket-video.html
@@ -10,14 +10,14 @@
   {% stylesheet 'firefox_whatsnew_38_pocket' %}
 {% endblock %}
 
-{% block page_title %}{{ _('Firefox. Now with more Pocket!') }}{% endblock %}
+{% block page_title %}{{ _('Pocket comes to Firefox!') }}{% endblock %}
 {% block body_id %}whatsnew-38-pocket-video{% endblock %}
 
 {% block content %}
 <main role="main">
     <section id="pocket">
       <div class="content">
-        <h1>{{ _('Firefox. Now with more Pocket!') }}</h1>
+        <h1>{{ _('Pocket comes to Firefox!') }}</h1>
         <p>
           {{ _('The world’s biggest save-for-later service is now a part of your Firefox.') }}
           {# L10n: the <em> tag below is for visual formatting only. #}
